footer hero image correct, header broken into left and right

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body{
     padding: 2rem;
 }
 
-.header > a{
+.header-left > a{
+    justify-content: space-between;
     text-decoration: none;
 }
 
@@ -34,7 +35,7 @@ body{
     background-color: white;
     border-radius: .75rem;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    display: none; 
+    display: none;
     min-width: 160px;
     padding: 1rem;
     position: absolute;
@@ -44,7 +45,7 @@ body{
 .dropdown-content a{
     color:hsl(0, 0%, 41%);
     display: block;
-    padding: 12px 16px;
+    padding: 8px 10px;
     text-decoration: none;
     
 }
@@ -58,13 +59,14 @@ button{
     background: hsl(0, 0%, 98%);
     border: 1.5px solid hsl(0, 0%, 8%);
     border-radius: .75rem;
-    padding: .5rem;
+    padding: .5rem 1.25rem;
 }
 
 .container{
+    column-gap: 12rem;
     display: grid;
     grid-template-columns: 50% 50%;
-    column-gap: 10rem;
+    justify-content: baseline;
 }
 
 h1{
@@ -79,21 +81,28 @@ p{
 }
 
 .container-left{
-    padding: 6rem;
+    padding:6rem;
 }
 
 .learn-more{
-    font-weight: bold;
+    font-size: 16px; 
+    font-weight: bolder;
+    padding: 1rem 1.5rem;
 }
+
 .footer{
     align-items: center;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 4.5rem;
    
+}
+.footer > img{
+    padding: 1rem;
 }
 
 .container-right > img{
    height: 50%; 
-   padding-top: 2rem;
+   padding-top: 3.25rem;
 }
